# furia-chat

./: docker-compose.yml  readme.md
furia-chat-bot-backend/: Dockerfile  pom.xml
furia-chat-bot-backend/src/main/java/br/com/danilo/furiachatbot/: FuriaChatBotApplication.java
furia-chat-bot-backend/src/main/java/br/com/danilo/furiachatbot/config/: StrategyMapConfig.java  WebClientConfig.java  WebCorsConfig.java
furia-chat-bot-backend/src/main/java/br/com/danilo/furiachatbot/controller/: ChatController.java
furia-chat-bot-backend/src/main/java/br/com/danilo/furiachatbot/model/: NewsDTO.java  (+11 more)
furia-chat-bot-backend/src/main/resources/: application.properties
furia-chat-bot-backend/src/test/java/br/com/danilo/furiachatbot/: FuriaChatBotApplicationTests.java
furia-chatbot-front/: .env  Dockerfile  index.html  package-lock.json  package.json  vite.config.js
furia-chatbot-front/src/: App.css  App.jsx  global.js  index.css
furia-chatbot-front/src/components/InfoCard/: InfoCard.js  InfoCard.module.css
furia-chatbot-front/src/components/MessageInput/: MessageInput.js  MessageInput.module.css
furia-chatbot-front/src/components/SideBar/: SideBar.js  SideBar.module.css
furia-chatbot-front/src/components/WelcomeScreen/: WelcomeScreen.js  WelcomeScreen.module.css
furia-chatbot-front/src/pages/: ChatPage.js  ChatPage.module.css
furia-chatbot-front/src/services/: chatService.js
furia-intent-service/: .gitignore  Dockerfile  main.py  pyproject.toml
furia-intent-service/app/: nlp_model.py  routes.py
furia-intent-service/training/: data.json  train_model.py
(+15 files in other folders)
