[tool.poetry]
name = "furia-intent-service"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "app"}] # Or adjust as needed for your project structure

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
spacy = "^3.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"